<resources>
    <string name="app_name">SmartFarmApp</string>
    <string name="log_recent_log">Recent Log</string>

    <!-- Shared Prefrences -->
    <string name="user_shared_preef">user_detail</string>
    <string name="shared_pref_name">User_name</string>
    <string name="default_username">User</string>


    <!-- GCM Parameter -->
    <string name="SENT_TOKEN_TO_SERVER">token_done</string>
    <string name="gcm_light">Light</string>
    <string name="gcm_start_temp">initialTemperature</string>
    <string name="gcm_end_temp">finalTemperature</string>
    <string name="gcm_start_light">initialLight</string>
    <string name="gcm_end_light">finalLight</string>
    <string name="gcm_moisture">Moisture</string>
    <string name="gcm_water">waterConsumption</string>
    <string name="shared_pref_first_time">FirstTime</string>
    <string name="token">Token</string>
    <!--<string name="gcm_defaultSenderId">sender</string>-->

    <string name="not_sound">sound_setting</string>
    <string name="not_vibrate">vibrate_setting</string>
    <string name="gcm_defaultSenderId">936042723281</string>

    <string name="shared_main_name">saved_details</string>
    <string name="shared_farm_id">Farm Id</string>
    <string name="shared_farm_contact">Contact</string>
    <string name="shared_farm_aadhar">Aadhar</string>
    <string name="shared_farm_city">City</string>
    <string name="shared_farm_name">Name</string>
    <string name="shared_farm_soil_type">Soil Type</string>
    <string name="shared_farm_no_motes">No of Motes</string>
    <string name="shared_first_time">First_Time</string>


    <string name="farm_id">Farm ID</string>
    <string name="signup_details">Details</string>
    <string name="signup_name">Name</string>
    <string name="signup_aadhar_no">Aadhar No</string>
    <string name="signup_contact_no">Contact No</string>
    <string name="signup_location">City</string>
    <string name="signup_done">Done</string>

    <string name="title_activity_notification">NotificationActivity</string>
    <string name="smart_farm">Smart Farm</string>
    <string name="main_crops">Crops</string>
    <string name="main_notification">Notification</string>
    <string name="main_suggestion">Suggestion</string>


    <string name="shared_previous_not">Previous Notification</string>

    <string name="draw_farm_instruction">Move the Cross to draw farm shape</string>
    <string name="done">Done</string>
    <string name="shared_farm_coordinates">Farm_Coordinates</string>
    <string name="cross1_x_coord">Cross1_X</string>
    <string name="cross1_y_coord">Cross1_Y</string>
    <string name="cross2_x_coord">Cross2_X</string>
    <string name="cross2_y_coord">Cross2_Y</string>
    <string name="cross3_x_coord">Cross3_X</string>
    <string name="cross3_y_coord">Cross3_Y</string>
    <string name="cross4_x_coord">Cross4_X</string>
    <string name="cross4_y_coord">Cross4_Y</string>
    <string name="set_up_done">Set Up Done</string>
    <string name="edit">Edit</string>
    <string name="choose_farm_shape">Choose Farm Shape</string>

    <string name="nill">Nill</string>
    <string name="less">Less</string>
    <string name="moderate">Moderate</string>
    <string name="medium">Medium</string>
    <string name="excess">Excess</string>
    <string name="full">Full</string>
    <string name="title_activity_current_crop">CurrentCrop</string>

    <string name="shared_pref_name_current_crop">Current Crop</string>
    <string name="shared_current_crop">Current Crop</string>
    <string name="shared_current_sown_date">Sown Date</string>
    <string name="shared_current_total_days">Total Days</string>
    <string name="shared_current_crop_sown_bool">Crop Sown</string>

    <string name="title_activity_my_farm">MyFarmActivity</string>
    <string name="my_farm_name">Name</string>
    <string name="my_farm_contact">Contact</string>
    <string name="my_farm_aadhar_no">Aadhar No</string>
    <string name="my_farm_area">Farm Area</string>
    <string name="my_farm_no_of_motes">No of Motes</string>
    <string name="my_farm_mote_weight">Mote Weight</string>
    <string name="my_farm_soil_type">Soil Type</string>
    <string name="my_farm_current_crop">Current Crop</string>
    <string name="signup_no_of_motes">No of Motes</string>
    <string name="signup_soil_type">Soil Type</string>
    <string name="signup_farm_area">Farm Area</string>
    <string name="shared_farm_area">Area</string>
    <string name="my_farm_city">City</string>


</resources>
