<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_weight_slider"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context="smartfarm.team.smartfarmapp.farm.WeightSliderActivity">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:id="@+id/node_id"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <LinearLayout
        android:layout_below="@id/node_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/full"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/full"
                android:textAlignment="center"
                android:paddingTop="15dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/excess"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/excess"
                android:textAlignment="center"
                android:paddingTop="15dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/moderate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/moderate"
                android:textAlignment="center"
                android:paddingTop="15dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />


            <TextView
                android:id="@+id/medium"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/medium"
                android:textAlignment="center"
                android:paddingTop="15dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/less"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/less"
                android:textAlignment="center"
                android:paddingTop="15dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/nill"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/nill"
                android:textAlignment="center"
                android:paddingTop="15dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />


        </LinearLayout>

        <ImageView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/slider_less"
            android:id="@+id/seekBar"/>

    </LinearLayout>

</RelativeLayout>
